@@ -1,2 +1,2 @@
-<div class="portlet" id="p-logo"><a class="wikilink" href="<?php echo WikiURL(HOME_PAGE)?>" title="Visit the Home Page [<?php echo $WikiTheme->tooltipAccessKeyPrefix() ?>-z]" accesskey="z"><span class="logo"><?php echo WIKI_NAME ?></span></a></div>
+<div class="portlet" id="p-logo"><a class="wikilink" href="<?php echo WikiURL(HOME_PAGE)?>" title="Visit the Home Page"><span class="logo"><?php echo WIKI_NAME ?></span></a></div>
 <img id="img-logo-right" src="<?php echo $WikiTheme->_findData('images/wiki_stamp.png')?>" alt="This is a WIKI! Edit every page" height="86" width="86" />
